# Early_Alzheimer_Detection_DL

./: .gitignore  INSTALL.md  README.md  config.yaml  dataset.py  model.py  test.py  test.sh  test_predictions.tsv  train+val.sh  train.py  train.sh  training_log.csv
alby_C++/: model.h  participants_Train50_updated.tsv  support.cpp  train.cpp  train.sh
c++/: dataset.h  model.h  participants_Train50_updated.tsv  participants_Val50_updated.tsv  train.cpp  train.sh
cpp/: CMakeLists.txt  config.h  dataset.h  model.h  participants_Val50_updated.tsv  requirements.md  test+probs.cpp  test.cpp  test.sh  train.cpp  train.sh
data/: README.md  participants_Test.tsv  participants_Train.tsv  participants_Val.tsv
envs/: README.md  clinicaEnv.yml  gradcamEnv.yml  trainEnv.yml
gradcam/: README.md  gradcam_otsu.sh  gradcam_pct.sh  gradcam_std.sh  visualize.py
gradcam/gradcam_out/: cam_AD.npy  cam_CN.npy  cam_MCI.npy
media/: README.md
preprocess/: README.md  run_adni_preprocess.sh  run_adni_preprocess_val_test.sh  run_convert.sh
python/: README.md  dataset.py  model.py  test+probs.py  test.py  test.sh  train.py  train.sh
results/: Test_Results.ipynb  instance_auc_sp.csv
results/cpp/: adni_test_cpp_instance_16.out  adni_test_cpp_instance_32.out  adni_test_cpp_instance_64.out  adni_test_cpp_instance_8.out  test_predictions_cpp.tsv
results/python/: Test_Results.ipynb  adni_test_0.out  adni_test_1.out  adni_test_10.out  adni_test_11.out  adni_test_12.out  adni_test_13.out  adni_test_14.out  adni_test_2.out  adni_test_3.out  adni_test_4.out  adni_test_5.out  adni_test_6.out  adni_test_7.out  adni_test_8.out  adni_test_9.out  adni_test_b1.out  adni_test_b2.out  batch_auc_sp.csv  test_predictions_py.tsv
utils/: README.md  check_performance.sh  plot_metrics.py  plot_metrics.sh  test.sh
